--- a/css/style.css
+++ b/css/style.css
@@ -23,15 +23,17 @@ header {
 }
 
 nav {
+  border-radius: 0 0 10px 10px;
   display: inline-block;
   background-color:#fff;
   height: 4%;
+  padding: 5%;
   z-index: inherit;
 }
 
-li {
-  padding-bottom: 3%;
-  margin-bottom: 5%;
+nav {
+  display: flex;
+  justify-content: space-between;
 }
 
 h1 {
@@ -41,23 +43,9 @@ h1 {
   margin: 0;
   padding-bottom: 6%;
   width: 20%;
-}
-
-nav {
-  border-radius: 0 0 10px 10px;
-  display: flex;
-  justify-content: space-between;
-  padding: 5%;
-}
-
-h1 {
   position: relative;
   left: -115px;
   bottom: 3px;
-}
-
-.content {
-  opacity: .9;
 }
 
 .svg-icon {
@@ -80,7 +68,7 @@ h1 {
 
 /* content */
 
-.container {
+section {
   position: absolute;
   radius: 10px;
   background-color: #fff;
@@ -89,7 +77,7 @@ h1 {
   z-index: -2;
 }
 
-.content {
+article {
   background-color: #fff;
   border-radius: 10px 10px 0 0;
   height: 300px;
@@ -102,7 +90,7 @@ h1 {
   width: 88%;
 }
 
-.map {
+footer {
   position: relative;
   background-image: url(../images/map.png);
   background-size: contain;
@@ -110,6 +98,12 @@ h1 {
   height: 100%;
   width: 100%;
   z-index: -1;
+}
+
+li {
+  border-bottom: .5px solid #556674;
+  padding-bottom: 3%;
+  margin-bottom: 5%;
 }
 
 .line, .times {
@@ -127,10 +121,6 @@ h1 {
   letter-spacing: 1.5px;
   margin-left: 5%;
   padding-top: 1%;
-}
-
-.lines {
-  border-bottom: .5px solid #556674;
 }
 
 .direction {
